--- a/Ruby-China-iOS/Ruby-China-iOS/Base.lproj/Main.storyboard
+++ b/Ruby-China-iOS/Ruby-China-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="T4C-fk-vcs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ftW-rP-U36">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -7,20 +7,23 @@
         <!--New Topic Controller-->
         <scene sceneID="132-X5-n5z">
             <objects>
-                <viewController id="T4C-fk-vcs" customClass="NewTopicController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="QmU-c0-Crc"/>
-                        <viewControllerLayoutGuide type="bottom" id="Dfb-Mv-ot1"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="uNa-E6-08s">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xL9-St-29e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="T4C-fk-vcs" customClass="NewTopicController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="0G4-8m-gc9">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="uqi-64-86v">
+                            <connections>
+                                <action selector="cancelButtonClicked:" destination="T4C-fk-vcs" id="Gk5-K7-ZgN"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="vFn-em-0iI">
+                            <connections>
+                                <action selector="doneButtonClicked:" destination="T4C-fk-vcs" id="WGp-Jq-2Xy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
             </objects>
-            <point key="canvasLocation" x="-382" y="252"/>
+            <point key="canvasLocation" x="1129" y="-412"/>
         </scene>
         <!--Home Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -72,7 +75,13 @@
                             <outlet property="delegate" destination="j1N-6o-Evo" id="Cfu-73-kFq"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="MKB-XD-ljE"/>
+                    <navigationItem key="navigationItem" id="MKB-XD-ljE">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="4q8-oW-4y5">
+                            <connections>
+                                <segue destination="T4C-fk-vcs" kind="push" id="hfK-Z8-sGx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RY4-a7-BX5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
